--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "io.qameta.allure-report" version "2.9.6"
 }
 
 group 'org.example'
@@ -10,13 +11,14 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'com.codeborne:selenide:6.3.0'
+    testImplementation 'com.codeborne:selenide:6.3.4'
     testImplementation group: 'org.testng', name: 'testng', version: '7.5'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.1.2'
-
+    // https://mvnrepository.com/artifact/io.qameta.allure/allure-testng
+    implementation group: 'io.qameta.allure', name: 'allure-testng', version: '2.17.3'
 }
 
 test {
