--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,12 @@ repositories {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/javax.mail/javax.mail-api
+    implementation group: 'javax.mail', name: 'javax.mail-api', version: '1.6.2'
+    // https://mvnrepository.com/artifact/com.sun.mail/smtp
+    implementation group: 'com.sun.mail', name: 'smtp', version: '2.0.1'
+    // https://mvnrepository.com/artifact/com.sun.mail/javax.mail
+    implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
     testImplementation 'com.codeborne:selenide:6.3.4'
     testImplementation group: 'org.testng', name: 'testng', version: '7.5'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
