--- a/src/test/resources/email.properties
+++ b/src/test/resources/email.properties
@@ -1,6 +1,7 @@
-mail.smtp.host=smtp.yandex.ru
-mail.smtp.socketFactory.port=465
+mail.smtp.host=webmail.itechart-group.com
+mail.smtp.socketFactory.port=143
 mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 mail.smtp.auth=true
-mail.smtp.port=465
+mail.smtp.port=143
 mail.transport.protocol=smtp
+mail.smtp.starttls.enable=true
