--- a/src/test/resources/email.properties
+++ b/src/test/resources/email.properties
@@ -1,7 +1,7 @@
-mail.smtp.host=webmail.itechart-group.com
-mail.smtp.socketFactory.port=143
+mail.smtp.host=imap.gmail.com
+mail.smtp.socketFactory.port=993
 mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 mail.smtp.auth=true
-mail.smtp.port=143
+mail.smtp.port=993
 mail.transport.protocol=smtp
 mail.smtp.starttls.enable=true
